--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,9 @@
 <h1>Vice Versa</h1>
-<p>something</p>
-<form>
+<form action="{% url 'reverse' %}">
 	<textarea cols="50" rows="10" name="usertext">
 		
 	</textarea>
 	<br>
 	<br>
-	<input type="submit" name="Reverse!">
+	<input type="submit" value="Reverse!">
 </form>
